# plum_lang

./: .gitignore  Cargo.toml  README.md
examples/: a.plum  a.rx  b.plum
src/: ast.rs  interpreter.rs  lexer.rs  main.rs  parser.rs  token.rs
src/ast/: decl.rs  expr.rs  mod.rs  stmt.rs  visit.rs
