[package]
name = "plum_lang"
version = "0.0.1"
edition = "2018"
description = "A simple toy lang."
homepage = "https://shizuku.github.io/plum_lang"
repository = "https://github.com/shizuku/plum_lang"
license-file = "LICENSE"

[[bin]]
name = "plum"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
